# dspy-adventure

./: Makefile  README.md  pyproject.toml
adventure/: __main__.py
adventure/models/: __init__.py  game_context_response.py
adventure/modules/: __init__.py  backstory_module.py  encounter_menu_module.py  encounter_module.py  encounter_resolver_module.py  game_start_module.py  location_module.py  narrative_module.py  points_of_interest_module.py  summary_module.py
adventure/types/: __init__.py  encounter_type.py
adventure/utils/: __init__.py  print_utils.py  string_utils.py
notebooks/: playground.ipynb
